--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=apienergia
 
 spring.datasource.url= jdbc:mysql://localhost:3306/energia?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= 1234
+spring.datasource.password=
 
 # Hibernate & JPA settings
 spring.jpa.hibernate.ddl-auto= update
