--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=apienergia
 
-spring.datasource.url= jdbc:mysql://localhost:3306/energia?useSSL=false
-spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate & JPA settings
 spring.jpa.hibernate.ddl-auto= update
